optimized index showcase section for mobile

--- a/app/views/index/index.phtml
+++ b/app/views/index/index.phtml
@@ -50,7 +50,7 @@
           <li><a href="/massage#ruecken-nackenmassage">Rücken- und Nachenmassage</a></li>
           <li><a href="/massage#schroepfen">Schröpfen</a></li>
           <li><a href="/massage#schmerz">Schmerztherapie nach Liebscher & Bracht</a></li>
-          <li><a href="/massage#fussreflexzonenmassage">Fussreflexzonenmassage</a></li>
+          <li><a href="/massage#fussreflexzonenmassage">Fussreflex&shy;zonenmassage</a></li>
         </ul>
       </div>
     </div>
@@ -68,7 +68,7 @@
           <li><a href="/kosmetik#medizinische-kosmetik">Medizinische Kosmetik</a></li>
           <li><a href="/kosmetik#aknebehandlung">Aknebehandlung</a></li>
           <li><a href="/kosmetik#antiaging">AntiAging</a></li>
-          <li><a href="/kosmetik#mikrodermabrasion">Mikrodermabrasion</a></li>
+          <li><a href="/kosmetik#mikrodermabrasion">Mikro&shy;dermabrasion</a></li>
           <li><a href="/kosmetik#microneedling">Microneedling</a></li>
           <li><a href="/kosmetik#klassische-kosmetik">Klassische Kosmetik</a></li>
           <li><a href="/kosmetik#manicure">Manicure</a></li>
