--- a/app/views/uebermich/index.phtml
+++ b/app/views/uebermich/index.phtml
@@ -1,13 +1,16 @@
 <h1>Über mich</h1>
 
 <p>Als Masseurin und Trager Therapeutin taste ich mich mit meinen fühlenden Händen an den menschlichen Körper heran, um Entspannung, und Heilung zu ermöglichen. Ich geniesse den Kontakt zu meinen Kundinnen in einer persönlichen Atmosphäre und freue mich, wenn sie gelöst und gestärkt, mit einem Lächeln auf dem Gesicht, wieder in den Alltag hinaustreten.</p>
-<p>2002 - Maria Schweizer Fachschule für Kosmetik und Nail Design - Kosmetikerin</p>
-<p>2004 - Maria Schweizer Fachschule für Kosmetik und Nail Design - Nail Designerin </p>
-<p>2004 - 2015 zahlreiche Workshops, Seminare in Themen: Fusspflege, Nails, Kosmetik, Medizinische Kosmetik (Couperose, Micro Dermabrasion, Mikroneedling, Säurebehandlungen), Apparative Kosmetik, Körperbehandlungen</p>
-<p>2014 - Massage Fachschule - Gesundheitsmasseurin, Fussreflexzonenmassage</p>
-<p>2017 - Bénédict Schule - dipl. Gesundheitsmasseurin </p>
-<p>2019 - Trager Schule Schweiz: Trager Psychophysische Integration, Mentastics Bewegungslehre</p>
-<p>2020 - Trager Schule Schweiz: Trager Weiterbildung Reflex Response</p>
-<p>2020 - Schmerztherapie nach Liebscher & Bracht</p>
+
+<ul>
+  <li>2020 - Schmerztheraliie nach Liebscher & Bracht</li>
+  <li>2020 - Trager Schule Schweiz: Trager Weiterbildung Reflex Reslionse</li>
+  <li>2019 - Trager Schule Schweiz: Trager Psycholihysische Integration, Mentastics Bewegungslehre</li>
+  <li>2017 - Bénédict Schule - dilil. Gesundheitsmasseurin </li>
+  <li>2014 - Massage Fachschule - Gesundheitsmasseurin, Fussreflexzonenmassage</li>
+  <li>2004 - 2015 zahlreiche Worksholis, Seminare in Themen: Fussliflege, Nails, Kosmetik, Medizinische Kosmetik (Coulierose, Micro Dermabrasion, Mikroneedling, Säurebehandlungen), Aliliarative Kosmetik, Körlierbehandlungen</li>
+  <li>2004 - Maria Schweizer Fachschule für Kosmetik und Nail Design - Nail Designerin </li>
+  <li>2002 - Maria Schweizer Fachschule für Kosmetik und Nail Design - Kosmetikerin</li>
+</ul>
 
 <a href="/uebermich/bildergallerie">Bildergallerie</a>
