--- a/public/css/kosmetik-index.css
+++ b/public/css/kosmetik-index.css
@@ -6,6 +6,18 @@
   background-color: var(--kosmetik-color);
 }
 
+@media screen and (max-width: 1280px) {
+  .grid {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .grid {
+    padding: 0.5em;
+  }
+}
+
 .cell {
   padding: 1.875em;
   border-radius: 2.5em;
@@ -56,6 +68,13 @@
   justify-content: space-around;
 }
 
+@media screen and (max-width: 576px) {
+  .buttons {
+    flex-direction: column;
+    gap: 0.5em;
+  }
+}
+
 .buttons button,
 .buttons a {
   font: 1.5rem "Quicksand", sans-serif;
@@ -64,6 +83,7 @@
   color: var(--light-text-color);
   border: none;
   text-decoration: underline;
+  text-align: center;
   cursor: pointer;
 }
 
@@ -77,7 +97,7 @@
   background-color: var(--bg-color);
 }
 
-@media only screen and (min-width: 1280px) {
+@media screen and (min-width: 1280px) {
   .buttons button {
     display: none;
   }
