--- a/public/css/massage-index.css
+++ b/public/css/massage-index.css
@@ -10,6 +10,15 @@
   padding: 1.875em;
   border-radius: 2.5em;
   background-color: var(--bg-color);
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+}
+
+.cell .cell-title {
+  font-size: 2.5rem;
+  text-align: center;
+  margin-bottom: 1em;
 }
 
 .curve {
@@ -19,4 +28,63 @@
 
 #curve {
   fill: var(--massage-color);
+}
+
+.cell-content {
+  transition: var(--transition);
+  margin-bottom: 3em;
+}
+
+.hide {
+  display: none;
+  transition: var(--transition);
+}
+
+.grid .cell .h3 {
+  margin-top: 1em;
+  margin-bottom: 0.25em;
+}
+
+.grid .cell p {
+  text-align: justify;
+}
+
+.buttons {
+  width: 100%;
+  margin-top: auto;
+  display: flex;
+  justify-content: space-around;
+}
+
+.buttons button,
+.buttons a {
+  font: 1.5rem "Quicksand", sans-serif;
+  padding: 0.5em 1em;
+  border-radius: 3.125em;
+  color: var(--light-text-color);
+  border: none;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.buttons a {
+  background-color: var(--dark-text-color);
+}
+
+.buttons button {
+  border: 1px solid var(--dark-text-color);
+  color: var(--dark-text-color);
+  background-color: var(--bg-color);
+}
+
+@media only screen and (min-width: 1280px) {
+  .buttons button {
+    display: none;
+  }
+
+  .hide {
+    display: flow-root;
+    max-height: 500px;
+    overflow-y: auto;
+  }
 }
