--- a/app/views/index.phtml
+++ b/app/views/index.phtml
@@ -7,7 +7,7 @@
     <?php // The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags ?>
 
     <?php // Base URL ?>
-    <base href="http://szm-massage-kosmetik.test">
+    <!--<base href="http://szm-massage-kosmetik.test">-->
 
     <?php // Document Title ?>
     <?= $this->tag->renderTitle() ?>
@@ -16,11 +16,16 @@
     <link rel="shortcut icon" type="image/x-icon" href="<?= $this->url->get('img/rainbow-heart.ico') ?>"/>
 
     <?php // CSS ?>
-    <link rel="stylesheet" href="<?= $this->url->get('css/global-styles.css') ?>">
-    <link rel="stylesheet" href="<?= $this->url->get('css/navigation.css') ?>">
-    <link rel="stylesheet" href="<?= $this->url->get('css/footer.css') ?>">
-    <?= $this->assets->outputCss() ?>
+    <!--<link rel="stylesheet" href="<?= $this->url->get('css/global-styles.css') ?>">-->
+    <!--<link rel="stylesheet" href="<?= $this->url->get('css/navigation.css') ?>">-->
+    <!--<link rel="stylesheet" href="<?= $this->url->get('css/footer.css') ?>">-->
+    <?php // $this->assets->outputCss() ?>
+    <link rel="stylesheet" href="<?= $this->url->get('css/style.css'); ?>">
   </head>
+
+  <?php // TODO: implement SASS ?>
+  <?php // TODO: add different id's to the main element for different pages ?>
+  <?php // TODO: add logo ?>
   <body>
     <div id="szm-logo">
       <div>S</div>
@@ -30,12 +35,11 @@
 
     <?php $this->partial('partials/nav'); ?>
 
-    <main id="main">
-      <?php // TODO: add logo ?>
+    <main id="<?= $this->view->page ?>">
       <?= $this->getContent() ?>
     </main>
 
-    <footer id="footer">
+    <footer>
       <address>
         <a href="/"><h2>SzM</h2></a>
         <div>Szilvia Marosi</div>
@@ -65,8 +69,8 @@
         <a href="/uebermich/bildergallerie">Bildergallerie</a>
       </div>
     </footer>
-
-    <?php // JS ?>
-    <?= $this->assets->outputJs() ?>
   </body>
 </html>
+
+<?php // JS ?>
+<?= $this->assets->outputJs() ?>
