--- a/app/views/index/index.phtml
+++ b/app/views/index/index.phtml
@@ -153,7 +153,7 @@
   </div>
 </div>
 
-<div class="transition1">
+<div class="transition">
   <img src="/img/layered-waves.svg" alt="Transition image">
 </div>
 
