--- a/app/views/partials/nav.phtml
+++ b/app/views/partials/nav.phtml
@@ -2,7 +2,7 @@
   <svg width="50px" height="50px" viewBox="0 0 24 24" version="1.2" baseProfile="tiny"><path fill="var(--dark-text-color)" d="M19 18c.55 0 1 .45 1 1s-.45 1-1 1h-14c-.55 0-1-.45-1-1s.45-1 1-1h14m0-2h-14c-1.654 0-3 1.346-3 3s1.346 3 3 3h14c1.654 0 3-1.346 3-3s-1.346-3-3-3zM19 11c.55 0 1 .45 1 1s-.45 1-1 1h-14c-.55 0-1-.45-1-1s.45-1 1-1h14m0-2h-14c-1.654 0-3 1.346-3 3s1.346 3 3 3h14c1.654 0 3-1.346 3-3s-1.346-3-3-3zM19 4c.55 0 1 .45 1 1s-.45 1-1 1h-14c-.55 0-1-.45-1-1s.45-1 1-1h14m0-2h-14c-1.654 0-3 1.346-3 3s1.346 3 3 3h14c1.654 0 3-1.346 3-3s-1.346-3-3-3z"/></svg>
 </div>
 
-<nav id="nav">
+<nav>
 
   <div id="close-container">
     <svg id="close-nav" version="1.1" x="0px" y="0px" width="28px" height="28px" viewBox="0 0 41.756 41.756" style="enable-background:new 0 0 41.756 41.756;" xml:space="preserve">
@@ -141,7 +141,7 @@
 
 <script>
   // This little script makes the nav appear/disappear
-  const nav = document.querySelector("#nav")
+  const nav = document.querySelector("nav")
 
   // Opens the menu when clicking the menu icon
   document.querySelector("#menu-icon").addEventListener("pointerdown", event => {
