--- a/public/css/index-index.css
+++ b/public/css/index-index.css
@@ -2,11 +2,11 @@
 @import url('index-curves.css');
 @import url('index-showcase.css');
 
-.transition1 {
+.transition {
   background-image: linear-gradient(to right, var(--trager-color) 0% 33.33%, var(--massage-color) 33.33% 66.66%, var(--kosmetik-color) 66.66% 100%);
 }
 
-.transition1 img {
+.transition img {
   width: 100%;
   height: 500px;
 }
@@ -30,7 +30,7 @@
     padding: 5em 0;
   }
 
-  .transition1 {
+  .transition {
     display: none;
   }
 }
