--- a/public/css/navigation.css
+++ b/public/css/navigation.css
@@ -1,23 +1,24 @@
-#nav {
+nav {
   /*border: 1px solid #000;*/
   position: fixed;
   top: 0;
   right: 0;
-  background-image: linear-gradient(to bottom, var(--bg-color) 50%, transparent);
+  /*background-image: linear-gradient(to bottom, var(--bg-color) 50%, transparent);*/
   font-size: 1.25rem;
   width: 180px;
-  height: 100%;
+  background-color: var(--bg-color);
+  /*height: 100%;*/
   transform: translateX(180px);
   transition: var(--transition);
   z-index: 999;
 }
 
-#nav li {
+nav li {
   display: flow-root;
   cursor: pointer;
 }
 
-#nav :where(a) {
+nav :where(a) {
   color: var(--dark-text-color);
   text-decoration: underline;
   display: flex;
@@ -29,7 +30,7 @@
   font-size: 1.5rem;
 }
 
-#nav.open {
+nav.open {
   transform: translateX(0);
   transition: var(--transition);
 }
@@ -57,9 +58,6 @@
 
 #trager-link {
   background-color: var(--trager-color);
-}
-
-#trager-link {
   color: var(--bg-color);
 }
 
@@ -69,9 +67,6 @@
 
 #massage-link {
   background-color: var(--massage-color);
-}
-
-#massage-link {
   color: var(--bg-color);
 }
 
@@ -81,9 +76,6 @@
 
 #kosmetik-link {
   background-color: var(--kosmetik-color);
-}
-
-#kosmetik-link {
   color: var(--bg-color);
 }
 
