added a DB; set up models; inserted some data

--- a/app/views/index/index.phtml
+++ b/app/views/index/index.phtml
@@ -84,7 +84,7 @@
       const kosmetik_card = document.querySelector("#kosmetik-card")
 
       // If the user clicks outside of the 3 cards all of them get turned back to normal
-      document.querySelector("body").addEventListener("pointerdown", (event) => {
+      document.querySelector("#home").addEventListener("pointerdown", (event) => {
         event.preventDefault()
         event.stopPropagation()
 
