--- a/app/views/kosmetik/index.phtml
+++ b/app/views/kosmetik/index.phtml
@@ -7,7 +7,7 @@
 <div class="grid">
 
   <div id="fusspflege" class="cell">
-    <h2 class="h2 cell-title">Fusspflege</h2>
+    <h2 class="h2 cell-title">Fusspflege/Pedicure</h2>
 
     <div class="cell-content hide">
       <p>Unsere Füsse tragen unser ganzes Gewicht und gehen mit uns durchs Leben. Der Mensch weiss schon lange, wie wichtig gesunde Füsse sind, denn die Geschichte der Fusspflege beginnt bereits mit den alten Ägyptern.</p>
@@ -32,7 +32,7 @@
 
     <div class="buttons">
       <button>Mehr erfahren</button>
-      <a href="/termin/index/k/fusspflege">Termin buchen</a>
+      <a href="/termin/index/2/8">Termin buchen</a>
     </div>
   </div>
 
@@ -62,7 +62,7 @@
 
     <div class="buttons">
       <button>Mehr erfahren</button>
-      <a href="/termin/index/k/medizinische-kosmetik">Termin buchen</a>
+      <a href="/termin/index/2/9">Termin buchen</a>
     </div>
   </div>
 
@@ -93,7 +93,7 @@
 
     <div class="buttons">
       <button>Mehr erfahren</button>
-      <a href="/termin/index/k/aknebehandlugn">Termin buchen</a>
+      <a href="/termin/index/2/10">Termin buchen</a>
     </div>
   </div>
 
@@ -115,7 +115,7 @@
 
     <div class="buttons">
       <button>Mehr erfahren</button>
-      <a href="/termin/index/k/antiaging">Termin buchen</a>
+      <a href="/termin/index/2/11">Termin buchen</a>
     </div>
   </div>
 
@@ -141,7 +141,7 @@
 
     <div class="buttons">
       <button>Mehr erfahren</button>
-      <a href="/termin/index/k/mikrodermabrasion">Termin buchen</a>
+      <a href="/termin/index/2/12">Termin buchen</a>
     </div>
   </div>
 
@@ -154,7 +154,7 @@
 
     <div class="buttons">
       <button>Mehr erfahren</button>
-      <a href="/termin/index/k/microneedling">Termin buchen</a>
+      <a href="/termin/index/2/13">Termin buchen</a>
     </div>
   </div>
 
@@ -167,7 +167,7 @@
 
     <div class="buttons">
       <button>Mehr erfahren</button>
-      <a href="/termin/index/k/phyto-cell">Termin buchen</a>
+      <a href="/termin/index/2/14">Termin buchen</a>
     </div>
   </div>
 
@@ -190,7 +190,7 @@
 
     <div class="buttons">
       <button>Mehr erfahren</button>
-      <a href="/termin/index/k/klassische-kosmetik">Termin buchen</a>
+      <a href="/termin/index/2/15">Termin buchen</a>
     </div>
   </div>
 
@@ -203,7 +203,7 @@
 
     <div class="buttons">
       <button>Mehr erfahren</button>
-      <a href="/termin/index/k/manicure">Termin buchen</a>
+      <a href="/termin/index/2/16">Termin buchen</a>
     </div>
   </div>
 
