--- a/app/views/index.phtml
+++ b/app/views/index.phtml
@@ -27,17 +27,48 @@
   <?php // TODO: add different id's to the main element for different pages ?>
   <?php // TODO: add logo ?>
   <body>
-    <div id="szm-logo">
+    <!--<div id="szm-logo">
       <div>S</div>
       <div>z</div>
       <div>M</div>
-    </div>
+    </div>-->
 
     <?php $this->partial('partials/nav'); ?>
 
     <main id="<?= $this->view->page ?>">
       <?= $this->getContent() ?>
     </main>
+
+    <script>
+      // This little script makes the nav appear/disappear
+      const nav = document.querySelector("nav")
+
+      // Opens the menu when clicking the menu icon
+      document.querySelector("#menu-icon").addEventListener("pointerdown", event => {
+        event.preventDefault()
+        event.stopPropagation()
+
+        nav.classList.add("open")
+      })
+
+      // Closes the menu when clicking the X
+      document.querySelector("#close-nav").addEventListener("pointerdown", event => {
+        event.preventDefault()
+        event.stopPropagation()
+
+        nav.classList.remove("open")
+      })
+
+      // Closes the menu when clicking outside the menu
+      document.querySelector("body").addEventListener("pointerdown", event => {
+        // event.preventDefault()
+        event.stopPropagation()
+
+        if (!nav.contains(event.target)) {
+          nav.classList.remove("open")
+        }
+      })
+    </script>
 
     <footer>
       <address>
