--- a/app/views/massage/index.phtml
+++ b/app/views/massage/index.phtml
@@ -17,7 +17,7 @@
 
     <div class="buttons">
       <button>Mehr erfahren</button>
-      <a href="/termin/index/m/klassische-massage">Termin buchen</a>
+      <a href="/termin/index/1/3">Termin buchen</a>
     </div>
   </div>
 
@@ -43,7 +43,7 @@
 
     <div class="buttons">
       <button>Mehr erfahren</button>
-      <a href="/termin/index/m/rückennackenmassage">Termin buchen</a>
+      <a href="/termin/index/1/4">Termin buchen</a>
     </div>
   </div>
 
@@ -69,7 +69,7 @@
 
     <div class="buttons">
       <button>Mehr erfahren</button>
-      <a href="/termin/index/m/schröpfen">Termin buchen</a>
+      <a href="/termin/index/1/5">Termin buchen</a>
     </div>
   </div>
 
@@ -84,7 +84,7 @@
 
     <div class="buttons">
       <button>Mehr erfahren</button>
-      <a href="/termin/index/m/liebscher&bracht">Termin buchen</a>
+      <a href="/termin/index/1/6">Termin buchen</a>
     </div>
   </div>
 
@@ -122,7 +122,7 @@
 
     <div class="buttons">
       <button>Mehr erfahren</button>
-      <a href="/termin/index/m/fussreflex">Termin buchen</a>
+      <a href="/termin/index/1/7">Termin buchen</a>
     </div>
   </div>
 </div>
