--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,7 +7,7 @@
   font-family: "monotype corsiva";
   src: url("../fonts/monotype_corsiva.ttf") format("truetype");
 }
-:not(head, html, style, script, svg, path, li) {
+:not(head, html, style, script, svg, path, li, table, tr, td) {
   display: flow-root;
 }
 
@@ -112,7 +112,11 @@ body footer h2 {
   font-size: 1.6rem;
 }
 body #menu-icon {
-  display: block;
+  background-color: var(--bg-color);
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: fixed;
   top: 10px;
   right: 12px;
@@ -430,6 +434,8 @@ body #massage .grid .cell .cell-title {
 body #massage .grid .cell .cell-content {
   transition: var(--transition);
   margin-bottom: 3em;
+  max-height: 500px;
+  overflow-y: auto;
 }
 body #massage .grid .cell .cell-content .h3 {
   margin-top: 1em;
@@ -457,6 +463,7 @@ body #massage .grid .cell .buttons button, body #massage .grid .cell .buttons a 
   cursor: pointer;
 }
 body #massage .grid .cell .buttons button {
+  display: none;
   border: 1px solid var(--dark-text-color);
   color: var(--dark-text-color);
   background-color: var(--bg-color);
@@ -494,6 +501,8 @@ body #kosmetik .grid .cell .cell-title {
 body #kosmetik .grid .cell .cell-content {
   transition: var(--transition);
   margin-bottom: 3em;
+  max-height: 500px;
+  overflow-y: auto;
 }
 body #kosmetik .grid .cell .cell-content .h3 {
   margin-top: 1em;
@@ -521,12 +530,30 @@ body #kosmetik .grid .cell .buttons button, body #kosmetik .grid .cell .buttons 
   cursor: pointer;
 }
 body #kosmetik .grid .cell .buttons button {
+  display: none;
   border: 1px solid var(--dark-text-color);
   color: var(--dark-text-color);
   background-color: var(--bg-color);
 }
 body #kosmetik .grid .cell .buttons a {
   background-color: var(--dark-text-color);
+}
+body #termin form {
+  display: flex;
+  flex-direction: column;
+  width: 245px;
+  gap: 5px;
+}
+body #termin form label {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+body #termin form label input {
+  overflow-x: hidden;
+}
+body #termin form label input[type=submit] {
+  width: 100%;
 }
 
 /*# sourceMappingURL=style.css.map */
