--- a/public/scss/mixins/_grid.scss
+++ b/public/scss/mixins/_grid.scss
@@ -22,6 +22,8 @@
     .cell-content {
       transition: var(--transition);
       margin-bottom: 3em;
+      max-height: 500px;
+      overflow-y: auto;
 
       .h3 {
         margin-top: 1em;
@@ -56,6 +58,7 @@
       }
 
       button {
+        display: none;
         border: 1px solid var(--dark-text-color);
         color: var(--dark-text-color);
         background-color: var(--bg-color);
