--- a/public/scss/pages/_index.scss
+++ b/public/scss/pages/_index.scss
@@ -2,3 +2,7 @@
 @forward "trager";
 @forward "massage";
 @forward "kosmetik";
+@forward "uebermich";
+@forward "gutschein";
+@forward "termin";
+@forward "kontakt";
