--- a/public/scss/partials/_navigation.scss
+++ b/public/scss/partials/_navigation.scss
@@ -1,6 +1,10 @@
 // TODO: media queries
 #menu-icon {
-  display: block;
+  background-color: var(--bg-color);
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: fixed;
   top: 10px;
   right: 12px;
