--- a/app/views/kosmetik/index.phtml
+++ b/app/views/kosmetik/index.phtml
@@ -6,7 +6,7 @@
 
 <div class="grid">
 
-  <div id="fusspflege" class="cell">
+  <div id="7" class="cell">
     <h2 class="h2 cell-title">Fusspflege/Pedicure</h2>
 
     <div class="cell-content hide">
@@ -32,11 +32,11 @@
 
     <div class="buttons">
       <button>Mehr erfahren</button>
-      <a href="/termin/index/2/8">Termin buchen</a>
+      <a href="/termin/index/7">Termin buchen</a>
     </div>
   </div>
 
-  <div id="medizinische-kosmetik" class="cell">
+  <div id="8" class="cell">
     <h2 class="h2 cell-title">Medizinische Kosmetik</h2>
 
     <div class="cell-content hide">
@@ -62,11 +62,11 @@
 
     <div class="buttons">
       <button>Mehr erfahren</button>
-      <a href="/termin/index/2/9">Termin buchen</a>
+      <a href="/termin/index/8">Termin buchen</a>
     </div>
   </div>
 
-  <div id="aknebehandlung" class="cell">
+  <div id="9" class="cell">
     <h2 class="h2 cell-title">Aknebehandlung</h2>
 
     <div class="cell-content hide">
@@ -93,11 +93,11 @@
 
     <div class="buttons">
       <button>Mehr erfahren</button>
-      <a href="/termin/index/2/10">Termin buchen</a>
+      <a href="/termin/index/9">Termin buchen</a>
     </div>
   </div>
 
-  <div id="antiaging" class="cell">
+  <div id="10" class="cell">
     <h2 class="h2 cell-title">AntiAging</h2>
 
     <div class="cell-content hide">
@@ -115,11 +115,11 @@
 
     <div class="buttons">
       <button>Mehr erfahren</button>
-      <a href="/termin/index/2/11">Termin buchen</a>
+      <a href="/termin/index/10">Termin buchen</a>
     </div>
   </div>
 
-  <div id="mikrodermabrasion" class="cell">
+  <div id="11" class="cell">
     <h2 class="h2 cell-title">Mikrodermabrasion</h2>
 
     <div class="cell-content hide">
@@ -141,11 +141,11 @@
 
     <div class="buttons">
       <button>Mehr erfahren</button>
-      <a href="/termin/index/2/12">Termin buchen</a>
+      <a href="/termin/index/11">Termin buchen</a>
     </div>
   </div>
 
-  <div id="microneedling" class="cell">
+  <div id="12" class="cell">
     <h2 class="h2 cell-title">Microneedling</h2>
 
     <div class="cell-content hide">
@@ -154,11 +154,11 @@
 
     <div class="buttons">
       <button>Mehr erfahren</button>
-      <a href="/termin/index/2/13">Termin buchen</a>
+      <a href="/termin/index/12">Termin buchen</a>
     </div>
   </div>
 
-  <div id="phyto-cell-behandlung" class="cell">
+  <div id="13" class="cell">
     <h2 class="h2 cell-title">Phyto-Cell Behandlung</h2>
 
     <div class="cell-content hide">
@@ -167,11 +167,11 @@
 
     <div class="buttons">
       <button>Mehr erfahren</button>
-      <a href="/termin/index/2/14">Termin buchen</a>
+      <a href="/termin/index/13">Termin buchen</a>
     </div>
   </div>
 
-  <div id="klassische-kosmetik" class="cell">
+  <div id="14" class="cell">
     <h2 class="h2 cell-title">Klassische Kosmetik</h2>
 
     <div class="cell-content hide">
@@ -190,11 +190,11 @@
 
     <div class="buttons">
       <button>Mehr erfahren</button>
-      <a href="/termin/index/2/15">Termin buchen</a>
+      <a href="/termin/index/14">Termin buchen</a>
     </div>
   </div>
 
-  <div id="manicure" class="cell">
+  <div id="15" class="cell">
     <h2 class="h2 cell-title">Manicure</h2>
 
     <div class="cell-content hide">
@@ -203,7 +203,7 @@
 
     <div class="buttons">
       <button>Mehr erfahren</button>
-      <a href="/termin/index/2/16">Termin buchen</a>
+      <a href="/termin/index/15">Termin buchen</a>
     </div>
   </div>
 
@@ -214,7 +214,6 @@
 
   buttons.forEach(button => {
     button.addEventListener("pointerdown", (event) => {
-      event.preventDefault()
       event.stopPropagation()
 
       // TODO: redo this with a query selector
