--- a/app/views/massage/index.phtml
+++ b/app/views/massage/index.phtml
@@ -6,7 +6,7 @@
 
 <div class="grid">
 
-  <div id="klassische-massage" class="cell">
+  <div id="2" class="cell">
     <h2 class="h2 cell-title">Klassische Massage</h2>
 
     <div class="cell-content hide">
@@ -17,11 +17,11 @@
 
     <div class="buttons">
       <button>Mehr erfahren</button>
-      <a href="/termin/index/1/3">Termin buchen</a>
+      <a href="/termin/index/2">Termin buchen</a>
     </div>
   </div>
 
-  <div id="ruecken-nackenmassage" class="cell">
+  <div id="3" class="cell">
     <h2 class="h2 cell-title">Rücken- und Nackenmassage</h2>
 
     <div class="cell-content hide">
@@ -43,11 +43,11 @@
 
     <div class="buttons">
       <button>Mehr erfahren</button>
-      <a href="/termin/index/1/4">Termin buchen</a>
+      <a href="/termin/index/3">Termin buchen</a>
     </div>
   </div>
 
-  <div id="schroepfen" class="cell">
+  <div id="4" class="cell">
     <h2 class="h2 cell-title">Schröpfen</h2>
 
     <div class="cell-content hide">
@@ -69,11 +69,11 @@
 
     <div class="buttons">
       <button>Mehr erfahren</button>
-      <a href="/termin/index/1/5">Termin buchen</a>
+      <a href="/termin/index/4">Termin buchen</a>
     </div>
   </div>
 
-  <div id="schmerz" class="cell">
+  <div id="5" class="cell">
     <h2 class="h2 cell-title">Schmerztherapie nach Liebscher & Bracht</h2>
 
     <div class="cell-content hide">
@@ -84,11 +84,11 @@
 
     <div class="buttons">
       <button>Mehr erfahren</button>
-      <a href="/termin/index/1/6">Termin buchen</a>
+      <a href="/termin/index/5">Termin buchen</a>
     </div>
   </div>
 
-  <div id="fussreflexzonenmassage" class="cell">
+  <div id="6" class="cell">
     <h2 class="h2 cell-title">Fussreflexzonenmassage</h2>
 
     <div class="cell-content hide">
@@ -122,7 +122,7 @@
 
     <div class="buttons">
       <button>Mehr erfahren</button>
-      <a href="/termin/index/1/7">Termin buchen</a>
+      <a href="/termin/index/6">Termin buchen</a>
     </div>
   </div>
 </div>
@@ -132,19 +132,18 @@
 
   buttons.forEach(button => {
     button.addEventListener("pointerdown", (event) => {
-      event.preventDefault()
       event.stopPropagation()
 
       // TODO: redo this with a query selector
-      const cell_content = button.parentElement.previousSibling.previousSibling
+      const cellContent = button.parentElement.previousSibling.previousSibling
 
-      if (!cell_content.classList.contains("hide")) {
-        cell_content.classList.add("hide")
+      if (!cellContent.classList.contains("hide")) {
+        cellContent.classList.add("hide")
         button.innerText = "Mehr Erfahren"
         return
       }
 
-      cell_content.classList.remove("hide")
+      cellContent.classList.remove("hide")
       button.innerText = "Schliessen"
     })
   })
