--- a/app/views/trager/index.phtml
+++ b/app/views/trager/index.phtml
@@ -6,7 +6,7 @@
 
 <div class="flex">
 
-  <div id="trager" class="cell">
+  <div id="0" class="cell">
     <h2 class="h2 cell-title">Trager&reg;</h2>
     <h3 class="h3">Die Trager-Methode-eine Erfindung von Dr. Milton Trager</h3>
     <p>TRAGER&reg; nutzt leichte, sanfte, unaufdringliche Bewegungen, um tiefsitzende physische und mentale Muster aufzulösen, Muster, die sich durch schlechte Haltung, Verletzungen, emotionale Traumen, Alltagsstress und schlechte Bewegungsgewohnheiten eingenistet haben.</p>
@@ -20,13 +20,23 @@
     <p>Neben der Förderung einer besseren Beweglichkeit und Koordination sowie der Schmerzlinderung soll die Trager-Methode zu einer Vertiefung der Atmung, Anregung des Stoffwechsels und Stimulation des Immunsystems führen. Muskulatur und innere Organe sollen besser durchblutet werden, ein gestörter Herzrhythmus soll sich ebenso wie ein gestörter Hormonhaushalt wieder normalisieren. Schließlich sollen die Entgiftungsfunktionen des Körpers und der Abfluss von Lymphflüssigkeit sich verbessern. Die Trager-Methode soll auch bei Gewichts-Problemen helfen.</p>
     <h3 class="h3">Die Trager-Methode ist eine sanfte Art der Physiotherapie, die sowohl körperliche als auch mentale Elemente gleichwertig in die Behandlung einbezieht.</h3>
     <p>Mit der Trager-Methode sollen individuell auf den Patienten passende Bewegungen, die sich für ihn gut anfühlen, gefunden, eingeübt und im Gedächtnis gespeichert werden, um damit Schmerzen zu lindern. Statt durch Kraftaufwand wie bei einer herkömmlichen Massage, setzt die Trager-Methode darauf, dem Patienten durch leichte Berührung Beweglichkeit zu verschaffen und ein Gefühl tiefer Entspannung zu vermitteln.</p>
+
+    <div class="buttons">
+      <button>Mehr erfahren</button>
+      <a href="/termin/index/0">Termin buchen</a>
+    </div>
   </div>
 
-  <div id="mentastic" class="cell">
+  <div id="1" class="cell">
     <h2 class="h2 cell-title">Mentastic</h2>
     <p><q>Bewegungen entstehen aus dem Geist, nicht aus dem Körper.</q>Dr. Milton Trager</p>
     <p>In der Mentastik geht es um die Beziehung zwischen Geist und Körper, genauer zwischen Geist und Bewegung. Aus diesem Verständnis kreierte Trager den Begriff Mentastik: «mentale Gymnasitk».</p>
     <p>Einfachheit und Mühelosigkeit der Bewegungen sind zentral. Der Körper und Geist agieren stets nach der Frage der Leichtigkeit: «Wie leicht und einfach kann ich meine Bewegungen fliessen lassen, damit mein Geist zusammen mit dem Körper harmonisiert?» Der Geist soll zur Ruhe kommen durch einfache, natürliche Bewegungen, die mit dem Körpergewicht, mit der Schwerkraft spielen. Die harmonischen Bewegungen erzeugen Vibrationen und Wellen im Körper, welche auch das ganze psychologische Gleichgewicht positiv beeinflussen.</p>
+
+    <div class="buttons">
+      <button>Mehr erfahren</button>
+      <a href="/termin/index/1">Termin buchen</a>
+    </div>
   </div>
 
 </div>
