--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -1,34 +1,31 @@
 <nav class="navbar navbar-expand-xxl bg-primary-subtle container-xxl px-xxl-3">
 
-<a class="navbar-brand" href="#">SzM</a>
-<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+<!-- Todo: this is not responsive -->
+<a class="navbar-brand" href="/">SzM</a>
+{# <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
   <span class="navbar-toggler-icon"></span>
-</button>
+</button> #}
 <div class="collapse navbar-collapse" id="navbarSupportedContent">
   <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
     <li class="nav-item">
-      <a class="nav-link active" aria-current="page" href="#">Home</a>
+      <a class="nav-link" href="/ueber-mich">Über mich</a>
     </li>
 
     <li class="nav-item">
-      <a class="nav-link" href="#">Über mich</a>
+      <a class="nav-link" href="/standort">Standort</a>
     </li>
 
     <li class="nav-item">
-      <a class="nav-link" href="#">Standort</a>
+      <a class="nav-link" href="/angebot">Angebot</a>
     </li>
 
     <li class="nav-item">
-      <a class="nav-link" href="#">Angebot</a>
-    </li>
-
-    <li class="nav-item">
-      <a class="nav-link" href="#">Gutschein</a>
+      <a class="nav-link" href="/gutschein">Gutschein</a>
     </li>
 
     <li class="nav-item"></li>
-      <a class="nav-link" href="#">Kontakt</a>
+      <a class="nav-link" href="/kontakt">Kontakt</a>
     </li>
 
   </ul>
